update score output

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			so.addChild("當GUI的數值改變時，須將數值記錄起來", 2, true);
 			so.addChild("可使用按鍵P顯示目前紀錄的值", 1, true);
 			so.addChild("紀錄的數值儲存為JSON檔", 2, true);
-			so.addChild("可按鍵選擇上 / 下一隻角色，角色morph也要改變", 1, false);
+			so.addChild("可按鍵選擇上 / 下一隻角色，角色morph也要改變", 1, true);
 
 			//產生自評表，參數如下所示
 			so.renderModal(
